打印字体显示大小调整

--- a/core/app/views/Inbounds/printQuaternionForm.html
+++ b/core/app/views/Inbounds/printQuaternionForm.html
@@ -71,22 +71,22 @@
           <td rowspan="${rowNum}">${i.unit?.selling?.fnSku}</td>
           <td rowspan="${rowNum}">${i.planQty}</td>
           <td rowspan="${rowNum}">${i.qty}</td>
-          <td style="font-size:${fontSize}px;" height="3.5mm;">
+          <td style="font-size:9px;" height="3.5mm;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.num}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.boxNum}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.singleBoxWeight}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.length}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.width}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.height}</div>
           </td>
           <td rowspan="${rowNum}">${i.unit?.whouse?.name}</td>
