--- a/core/app/views/Outbounds/printOutboundForm.html
+++ b/core/app/views/Outbounds/printOutboundForm.html
@@ -67,22 +67,22 @@
           <td rowspan="${rowNum}" style="font-size:11px;">${i.fba?.shipmentId}</td>
           <td rowspan="${rowNum}">${i.sku}</td>
           <td rowspan="${rowNum}">${i.cooperator?.name}</td>
-          <td style="font-size:${fontSize}px;" height="3.5mm;">
+          <td style="font-size:9px;" height="3.5mm;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.num}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.boxNum}</div>
           </td>
           <td style="font-size:${fontSize}px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.singleBoxWeight}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.length}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.width}</div>
           </td>
-          <td style="font-size:${fontSize}px;">
+          <td style="font-size:9px;">
             <div style="height:${6/rowNum}mm;">${i.mainBox?.height}</div>
           </td>
           <td rowspan="${rowNum}">${mainBoxNum + lastBoxNum}</td>
