调整包装信息显示宽度

--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -118,7 +118,7 @@
   </form>
 </div>
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;left: 40%;">
   <div class="modal-header">
     <h4>包装信息</h4>
   </div>
