--- a/core/app/views/Refunds/edit.html
+++ b/core/app/views/Refunds/edit.html
@@ -93,7 +93,7 @@
 
 #{records records:logs/}
 
-<div id="refund_box_info_modal" class="modal hide fade" style="width:1000px;">
+<div id="refund_box_info_modal" class="modal hide fade" style="width:1000px;left:40%;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
