--- a/core/app/views/Applys/transports.html
+++ b/core/app/views/Applys/transports.html
@@ -36,6 +36,10 @@
       <button class="btn btn-primary" data-loading>搜索</button>
     </div>
 
+    <div class="inline">
+      <a href="" target="_blank" class="btn btn-info">物流费用报表</a>
+    </div>
+
   </div>
 </div>
 
