--- a/core/app/views/Outbounds/blank.html
+++ b/core/app/views/Outbounds/blank.html
@@ -174,7 +174,7 @@
 
 #{/form}
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;left: 40%;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
