--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -125,7 +125,7 @@
   </form>
 </div>
 
-<div id="refund_box_info_modal" class="modal hide fade" style="width:1000px;">
+<div id="refund_box_info_modal" class="modal hide fade" style="width:1000px;left: 40%">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
