--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -112,7 +112,7 @@
   </div>
 </form>
 
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px; left: 40%;">
   <div class="modal-body">
     <div id="refresh_div"></div>
   </div>
