--- a/core/app/views/Payments/index.html
+++ b/core/app/views/Payments/index.html
@@ -5,6 +5,7 @@
 #{/set}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
+    #{script 'applys/index.es6'/}
 #{/set}
 
 #{form @Payments.index(), class:'search_form', id:'payments_form', method:'POST'}
@@ -23,19 +24,19 @@
         #{select_enum name:'p.dateType', items:models.view.post.PaymentsPost.DateType.values() , value: p.dateType /}
     </div>
     <div class="inline">
-      #{select_enum name:'p.states', items:models.finance.Payment.S.values()}
-        <option value="">状态</option>
-      #{/select_enum}
+        #{select_enum name:'p.states', items:models.finance.Payment.S.values()}
+          <option value="">状态</option>
+        #{/select_enum}
     </div>
     <div class="inline">
-      #{select 'p.cooperId', items:cooperator, labelProperty:'name', valueProperty:'id' ,value: p.cooperId }
-          #{option ''}合作伙伴#{/option}
-      #{/select}
+        #{select 'p.cooperId', items:cooperator, labelProperty:'name', valueProperty:'id' ,value: p.cooperId }
+            #{option ''}合作伙伴#{/option}
+        #{/select}
     </div>
     <div class="inline">
-      #{select name:'p.actualCurrency', items:helper.Currency.values() , value: p.actualCurrency }
-          #{option ''}支付币种#{/option}
-      #{/select}
+        #{select name:'p.actualCurrency', items:helper.Currency.values() , value: p.actualCurrency }
+            #{option ''}支付币种#{/option}
+        #{/select}
     </div>
 
     <div class="input-prepend input-append inline">
@@ -43,6 +44,11 @@
       <input type="hidden" name="p.page" value="${p.page}">
       <input type="text" style="width:120px;" name="p.search" placeholder="支付账号" value="${p.search}">
       <button class="btn btn-primary" data-loading>搜索</button>
+    </div>
+
+    <div class="inline">
+      <a href="javascript:void(0)" data-url="@{Excels.shipmentDetailCost()}" target="_blank" id="exportBtn"
+         class="btn btn-info">物流费用报表</a>
     </div>
 
   </div>
