--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -97,7 +97,10 @@
             <th>入库数</th>
             <td>${unit.inboundQty}</td>
             <th>可用库存</th>
-            <td>${unit.availableQty}</td>
+            <td>
+            ${unit.availableQty}
+            (主箱数:${unit.mainBox.boxNum} 每箱个数:${unit.mainBox.num} 尾箱数:${unit.lastBox.boxNum} 每箱个数:${unit.lastBox.num})
+            </td>
           </tr>
         #{/if}
     </table>
