分拆采购计划新增包装信息自动删减规则

--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -74,6 +74,7 @@
   <th>预计到库时间</th>
   <td>
     <input type="date" name="newUnit.attrs.planArrivDate" value="${newUnit.attrs.planArrivDate.date()}">
+    <span class="add-on">? 天</span>
   </td>
 </tr>
 
