--- a/core/app/views/Inbounds/_units.html
+++ b/core/app/views/Inbounds/_units.html
@@ -56,7 +56,7 @@
                      #{if unit.planQty>0 && unit.qty/unit.planQty<0.9 && unit.handType?.name()=='Delivery'}
                          background-color:yellow;
                      #{/if}" value="${unit.qty}" data-origin="${unit.qty}"
-              #{if unit.status.name() != "Create"}
+              #{if !Arrays.asList('Create','Receive').contains(unit.status.name())}
                  readonly
               #{/if}/>
         </td>
