库存调整 日志显示错误

--- a/core/app/views/StockRecords/adjustStock.html
+++ b/core/app/views/StockRecords/adjustStock.html
@@ -58,7 +58,7 @@
       <tr>
         <th>备注</th>
         <td colspan="4">
-          <textarea name="inbound.memo" rows="4" class="input-block-level"></textarea>
+          <textarea name="record.memo" rows="4" class="input-block-level"></textarea>
         </td>
       </tr>
       <tr>
