运输单详情页添加 系统产品体积

--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -161,8 +161,8 @@
     </tr>
 
     <tr>
-      <th>运输单总重量</th>
-      <td>${ship.totalWeight()} kg</td>
+      <th>运输单总重量/总体积</th>
+      <td>${ship.totalWeight()} kg / ${ship.totalVolume()} m³</td>
       <th>总托盘数(货代)</th>
       <td>
         <input type="text" name="ship.totalStockShipment" value="${ship.totalStockShipment}" id="totalStockShipment"/>
