--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -9,10 +9,10 @@
     <th style="width:80px;">去往仓库</th>
     <th style="width:80px;">状态</th>
     <th style="width:120px;">预计开始时间</th>
-    <th style="width:6%;">实际完成天数</th>
+    <th style="width:90px;">实际完成天数</th>
     <th style="width:120px;">创建时间</th>
     <th style="width:120px;">预计到库时间</th>
-    <th style="width:30px;">创建者</th>
+    <th style="width:40px;">创建者</th>
     <th style="width:100px;">出库单ID</th>
   </tr>
 #{list items:shipments, as:'ship'}
