开发历史库存页面

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -228,6 +228,9 @@
                 #{power.ck "stockrecords.index"}
                   <li><a href="@{StockRecords.index()}">库存异动</a></li>
                 #{/power.ck}
+                #{power.ck "stockrecords.indexhistory"}
+                  <li><a href="@{StockRecords.indexHistoryStock()}">历史库存查询</a></li>
+                #{/power.ck}
                 #{power.ck "products.whouseattrs"}
                   <li><a href="@{Products.whouseAttrs()}">产品</a></li>
                 #{/power.ck}
