--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -32,8 +32,8 @@
   #{/ifnot}
     <th rel="popover" content="<img src='/img/helper/fnsku.png'/>" width="auto">FnSku</th>
     <th>运输方式</th>
-    <th>当前仓库</th>
-    <th width="140px;">预计交货时间<br>预计运输时间<br></th>
+    <th>预计交货时间</th>
+    <th>预计运输时间</th>
     <th>实际交货时间</th>
     <th>是否核准</th>
     <th>质检结果</th>
@@ -173,11 +173,8 @@
     <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}<br>
       <span style="color:red">${unit.isDedicated?'(专线)':''}</span>
     </td>
-    <td>${unit.currWhouse?.name}</td>
-    <td>
-      预计交货:#{time_tooltip time:unit.attrs.planDeliveryDate/}<br>
-      预计运输:#{time_tooltip time:unit.attrs.planShipDate/}<br>
-    </td>
+    <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+    <td>#{time_tooltip time:unit.attrs.planShipDate/}</td>
     <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
     <td name="isConfirm">#{yesOrNo f:unit.isConfirm/}</td>
     <td>${unit.result?.label()}</td>
