历史库存页面查询条件修改

--- a/core/app/views/StockRecords/indexHistoryStock.html
+++ b/core/app/views/StockRecords/indexHistoryStock.html
@@ -24,7 +24,7 @@
   <form action="@{StockRecords.indexHistoryStock()}" method="get" class="search_form" id="search_Form">
     <div class="span12">
       <div class="input-prepend input-append inline">
-        <span class="add-on">To:</span>
+        <span class="add-on">Day:</span>
         <input type="date" name="p.to" value="${p.to.date()}">
       </div>
 
