库存调整存取调整之后的值

--- a/core/app/views/StockRecords/show.html
+++ b/core/app/views/StockRecords/show.html
@@ -34,7 +34,7 @@
       </tr>
       <tr>
         <th>调整前库存</th>
-        <td><input type="text" value="${record?.currQty}" readonly></td>
+        <td><input type="text" value="${record?.currQty - record?.qty}" readonly></td>
         <th>调整类型</th>
         <td>
           <select name="record.category" readonly="readonly">
