--- a/core/app/views/Sellings/index.html
+++ b/core/app/views/Sellings/index.html
@@ -104,10 +104,7 @@
       <td>${s.aps.salePrice}</td>
       <td>${s.asin}</td>
       <td>${s.sellingCycle?.label()}</td>
-      <td>
-          #{if !s.state.name().equals("DOWN")}是#{/if}
-          #{else }否#{/else}
-      </td>
+      <td>${s.state.name().equals("DOWN") ? '否' : '是'}</td>
       <td>#{time_tooltip time:s.recentlyFeed()?.createdAt, datetime:true/}</td>
       <td>${s.recentlyFeed()?.analyzeResult}</td>
       <td>#{time_tooltip time:s.createDate, datetime:true /}</td>
@@ -123,7 +120,6 @@
           #{/if}
         <a href="@{ProcureUnits.blank(s.sellingId)}" target="_blank" class="btn btn-mini btn-inverse" rel="popover"
            title="创建采购计划">Create</a>
-
       </td>
     </tr>
   #{/list}
